[package]
name    = "dw1000"
version = "0.1.0"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.2"
ieee802154   = "0.1.0"
nb           = "0.1.1"
serde        = { version = "1.0.79", default-features = false }
serde_derive = "1.0.79"
ssmarshal    = { version = "1.0", default-features = false }
