[package]
name    = "dwm1001"
version = "0.2.1"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]
edition = "2018"

description   = "Board Support Crate for the Decawave DWM1001 module and development board"
documentation = "https://docs.rs/dw1000"
repository    = "https://github.com/braun-robotics/rust-dw1000"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["decawave", "dw1000", "bsc", "radio", "uwb"]


[badges]
travis-ci = { repository = "braun-robotics/rust-dwm1001" }


[dependencies]
cortex-m-rt             = { version = "0.6.3", optional = true }
cortex-m-semihosting    = "0.3.0"
dw1000                  = { git = "https://github.com/braun-embedded/rust-dw1000.git" }
embedded-hal            = "0.2.1"
embedded-timeout-macros = "0.2.0"

[dependencies.cortex-m]
version  = ">= 0.5.10, < 0.7"
features = [ "const-fn" ]

[dependencies.nrf52832-hal]
version          = "0.8.0"
default-features = false
features         = [ "xxAA-package" ]


[dev-dependencies]
heapless          = "0.5.0"
nb                = "0.1.1"
panic-semihosting = "0.5.0"


[features]
# expose features of DWM1001-Dev board
dev = []
# enable runtime support
rt = ["nrf52832-hal/rt", "cortex-m-rt"]
# enable debug output in some examples
semihosting = []


[[example]]
name              = "blink"
required-features = ["dev", "rt"]

[[example]]
name              = "uarte"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_delayed_tx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_id"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_only_rx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_only_tx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_ranging_anchor"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_ranging_tag"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_reg_modify"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_reg_rw"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_reg_short"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_rx_tx"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_subreg"
required-features = ["dev", "rt"]

[[example]]
name              = "dw1000_subreg_ext_addr"
required-features = ["dev", "rt"]

[[example]]
name              = "lis2dh12"
required-features = ["dev", "rt"]

[[example]]
name              = "uarte_heapless_string"
required-features = ["dev", "rt"]


[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = 3


[package.metadata.docs.rs]
all-features = true
