[package]
name    = "dw1000"
version = "0.4.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

description   = "Driver for the Decawave DW1000 UWB wireless transceiver chip, providing radio communication based on IEEE 802.15.4 and distance measurement"
documentation = "https://docs.rs/dw1000"
repository    = "https://github.com/braun-embedded/rust-dw1000"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "hardware-support", "no-std"]
keywords      = ["decawave", "dw1000", "radio", "embedded-hal", "embedded-hal-driver"]


[badges]
travis-ci = { repository = "braun-embedded/rust-dw1000" }


[dependencies]
embedded-hal = "0.2.4"
ieee802154   = "0.3.0"
nb           = "1.0.0"
fixed        = "1.5.0"
micromath    = "1.1.0"


[dependencies.serde]
version = "1.0.115"
default-features = false
features = ["derive"]

[dependencies.ssmarshal]
version = "1.0.0"
default-features = false

[dependencies.num_enum]
version = "0.5.1"
default-features = false

[features]
default = []
std = ["ssmarshal/std", "serde/std", "num_enum/std"]
