[package]
name = "dwm1001"
version = "0.5.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"
description = "Board Support Crate for the Decawave DWM1001 module and development board"
documentation = "https://docs.rs/dwm1001"
repository = "https://github.com/braun-embedded/rust-dw1000"
license = "0BSD"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["decawave", "dw1000", "bsc", "radio", "uwb"]

[package.metadata.docs.rs]
all-features = true

[badges]
travis-ci = { repository = "braun-embedded/rust-dw1000" }

[dependencies]
cortex-m = "0.7.2"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.4"
embedded-timeout-macros = "0.3.0"
lis2dh12 = "0.6.0"
cortex-m-rt = { version = ">=0.6, <0.8", optional = true }
dw1000 = { version = "0.5.0", path = "../dw1000" }
nrf52832-hal = { version = "0.14.0", default-features = false, features = [
    "xxAA-package",
] }


[dev-dependencies]
heapless = "0.7.0"
nb = "1.0.0"
panic-semihosting = "0.5.3"
panic-probe = "0.3.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"

[features]
default = ["dev", "rt", "semihosting"]
# expose features of DWM1001-Dev board
dev = []
# enable runtime support
rt = ["nrf52832-hal/rt", "cortex-m-rt"]
# enable debug output in some examples
semihosting = []


[[example]]
name = "blink"
required-features = ["dev", "rt"]

[[example]]
name = "uarte"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_delayed_tx"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_id"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_only_rx"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_only_tx"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_ranging_anchor"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_ranging_tag"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_reg_modify"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_reg_rw"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_reg_short"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_rx_tx"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_subreg"
required-features = ["dev", "rt"]

[[example]]
name = "dw1000_subreg_ext_addr"
required-features = ["dev", "rt"]

[[example]]
name = "lis2dh12"
required-features = ["dev", "rt"]

[[example]]
name = "uarte_heapless_string"
required-features = ["dev", "rt"]


[profile.release]
incremental = false
codegen-units = 1
lto = true
opt-level = 3
debug = true
