[package]
name = "dwm1001"
version = "0.6.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"
description = "Board Support Crate for the Decawave DWM1001 module and development board"
documentation = "https://docs.rs/dwm1001"
repository = "https://github.com/braun-embedded/rust-dw1000"
license = "0BSD"
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["decawave", "dw1000", "bsc", "radio", "uwb"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
cortex-m = "0.7.3"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.6"
embedded-timeout-macros = "0.3.0"
lis2dh12 = "0.6.6"
cortex-m-rt = { version = "0.7.1", optional = true }
dw1000 = { version = "0.6.0", path = "../dw1000" }
nrf52832-hal = { version = "0.14.0", default-features = false, features = [
    "xxAA-package",
] }

[dev-dependencies]
heapless = "0.7.8"
nb = "1.0.0"
panic-probe = "0.3.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"

[features]
default = ["dev", "rt"]
# expose features of DWM1001-Dev board
dev = []
# enable runtime support
rt = ["nrf52832-hal/rt", "cortex-m-rt"]

[profile.release]
incremental = false
codegen-units = 1
lto = true
opt-level = 3
debug = true
